# PlanetSimulation

./: .gitignore  CMakeLists.txt  README.md
include/common/: EventHandler.hpp
include/physics/: Vector2d.hpp  vector2d.hpp
include/render/: IDrawing.h  Renderer.hpp  renderer.hpp
include/simulation/: Planet.hpp  RenderObjectsContainer.hpp  Simulation.hpp  config.hpp  point.hpp  simulation.hpp
src/: main.cpp
